start project, add fonts, menu hero-block

--- a/students/buzyl_nazar/final-project/src/css/_fonts.scss
+++ b/students/buzyl_nazar/final-project/src/css/_fonts.scss
@@ -1,5 +1,5 @@
-// @include fonts($font-default-name, 'raleway-v18-latin-300', 300);
+@include fonts($font-default-name, 'oswald-v36-latin-300', 300);
 
-// @include fonts($font-default-name, 'raleway-v18-latin-700', 700);
+@include fonts($font-default-name, 'oswald-v36-latin-regular', 400);
 
 // @include fonts($font-default-name, 'raleway-v18-latin-900', 900);
