--- a/students/buzyl_nazar/final-project/src/css/style.scss
+++ b/students/buzyl_nazar/final-project/src/css/style.scss
@@ -3,3 +3,8 @@
 @import "./mixins";
 @import "./fonts";
 @import "./tipografy";
+@import "./menu";
+@import "./login";
+@import "./search";
+@import "./cart";
+@import "./hero-block";
