--- a/students/buzyl_nazar/final-project/src/css/_tipografy.scss
+++ b/students/buzyl_nazar/final-project/src/css/_tipografy.scss
@@ -4,7 +4,7 @@
     font-family: $font-dafault;
     font-size: $default-font-size;
     line-height: 1.4;
-    @include bg-cover('../image/bg.jpg');
+    // @include bg-cover('../image/bg.jpg');
     min-height: 100vh;
     color: $default-color-text;
 }
@@ -25,9 +25,9 @@
     padding: $default-gap;
 }
 
-:focus {
-    box-shadow: 0 0 5px blue;
-}
+// :focus {
+//     box-shadow: 0 0 5px blue;
+// }
 
 img {
     max-width: 100%;
