--- a/students/buzyl_nazar/final-project/src/css/_vars.scss
+++ b/students/buzyl_nazar/final-project/src/css/_vars.scss
@@ -40,7 +40,7 @@ $border-color:$green-mist;
 $font-folder-path: '../fonts/';
 $folder-image: '../image/';
 
-$font-default-name: 'Oswald';
+$font-default-name: 'Roboto';
 $font-secondary-name: 'Roboto';
 
 $follback: Arial,
