add menu search login cart

--- a/students/buzyl_nazar/beetroot-layout/src/css/style.scss
+++ b/students/buzyl_nazar/beetroot-layout/src/css/style.scss
@@ -3,3 +3,9 @@
 @import "./mixins";
 @import "./fonts";
 @import "./tipografy";
+@import "./menu";
+@import "./login";
+@import "./search";
+@import "./cart";
+@import "./logo";
+@import "./hero-block";
