--- a/students/buzyl_nazar/beetroot-layout/src/css/_tipografy.scss
+++ b/students/buzyl_nazar/beetroot-layout/src/css/_tipografy.scss
@@ -1,12 +1,17 @@
 @include grid();
 
 .page {
-    font-family: $font-dafault;
+    font-family: $font-default;
     font-size: $default-font-size;
     line-height: 1.4;
-    @include bg-cover('../image/bg.jpg');
+    // @include bg-cover('../image/bg.jpg');
     min-height: 100vh;
     color: $default-color-text;
+    overflow: hidden;
+}
+.header{
+    box-sizing: border-box;
+    max-height: 70px;
 }
 
 .container {
@@ -25,9 +30,9 @@
     padding: $default-gap;
 }
 
-:focus {
-    box-shadow: 0 0 5px blue;
-}
+// :focus {
+//     box-shadow: 0 0 5px blue;
+// }
 
 img {
     max-width: 100%;
