--- a/students/buzyl_nazar/beetroot-layout/src/css/_vars.scss
+++ b/students/buzyl_nazar/beetroot-layout/src/css/_vars.scss
@@ -1,42 +1,64 @@
 $alto: #ddd;
 $green: #008000;
-$chambray:#3b5998;
 $color-white: #ffffff;
 $color-black: #000000;
+$dodger-blue: #5474FD;
+$mercury: #E8E8E8;
+$dusty-gray:#999999;
+$mine-shaft: #232323;
+$dark-mine-shaft:#333333;
+$red-orange: #ff2727;
 $grey: #bababa;
 $orange: #ff6033;
 $brown: #a52a2a;
+$pickled-bluewood: #2C4058;
+$malibu: #55B7FF;
+$river-bed:#4b5562;
+$heliotrope: #7E5AFF;
+$iron:#d5d9de;
+$flax-smoke: #7d8965;
+$dingley: #6e774a;
+$green-mist: #ced6af;
+$norway: #9DB892;
+$spring-wood:#f7f8f3;
+$tuatara: #1c1c1b;
 
-$input-border-color: $grey;
+$spring-wood: #FAF9F6;
+$periwinkle-gray: #BFD6E5;
+$botticelli: #CBDEE8;
+$bali-hai: #869BB5;
+$hippie-blue: #578CB6;
+$chambray: #3F578E;
+$ebony-clay: #262B3C;
+
+$input-border-color: $green-mist;
 $default-border-radius: 5px;
-
-$facebook-color: $chambray;
 
 $default-border: 1px solid $input-border-color;
 
 $container-width: 1200px;
 $default-gap: 15px;
 
-$body-bg-color: $green;
-$border-color: $alto;
+$body-bg-color: $dingley;
+$border-color:$green-mist;
 
 $font-folder-path: '../fonts/';
 $folder-image: '../image/';
 
-$font-default-name: 'Raleway';
+$font-default-name: 'Montserrat';
 $font-secondary-name: 'Roboto';
 
 $follback: Arial,
 Helvetica,
 sans-serif;
 
-$font-dafault: $font-default-name,
+$font-default: $font-default-name,
 $follback;
 $font-secondary: $font-secondary-name,
 $follback;
 
 $default-font-size: 16px;
-$default-color-text: $color-black;
+$default-color-text: $ebony-clay;
 
 
 $breack-points: ("xl": 1200px,
